--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -194,6 +194,7 @@
         justify-content: space-between;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
+        box-shadow: 0 3px 5px rgba(0,0,0,0.1);
         
 
         button {
