--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,7 @@
   justify-content: space-between;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
 }
 .footer-todoList button {
   background-color: transparent;
