--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -117,6 +117,10 @@
             opacity: 1;
         }
 
+        &:active {
+            cursor: move;
+        }
+
         .container-checkbox {
             display: block;
             position: relative;
