ajuste no cursor

--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -117,8 +117,8 @@
             opacity: 1;
         }
 
-        &:active {
-            cursor: move;
+        &:hover {
+            cursor: grab !important;
         }
 
         .container-checkbox {
