--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,8 @@
 }
 
 .container-todoList {
-  width: 500px;
+  width: 100%;
+  max-width: 600px;
   margin: auto;
   position: relative;
   top: -200px;
@@ -72,10 +73,11 @@
 
 .style-default {
   width: 100%;
-  height: 50px;
+  height: 70px;
   display: flex;
   align-items: center;
   padding: 10px;
+  font-size: 20px;
 }
 
 .todos div:first-child {
@@ -117,7 +119,7 @@
   opacity: 1;
 }
 .todoItem:hover {
-  cursor: grab !important;
+  cursor: move !important;
 }
 .todoItem .container-checkbox {
   display: block;
@@ -167,8 +169,8 @@
   margin-top: 7px;
 }
 .todoItem .btn-excluirTodo {
-  width: 10px;
-  height: 10px;
+  width: 15px;
+  height: 15px;
   background-image: url(./../images/icon-cross.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -192,6 +194,7 @@
   opacity: 0.7;
   font-weight: 700;
   cursor: pointer;
+  font-size: 16px;
 }
 .footer-todoList button:hover {
   color: hsl(220deg, 98%, 61%);
@@ -199,8 +202,8 @@
 .footer-todoList span {
   color: hsl(234deg, 11%, 52%);
   font-weight: 700;
-  font-size: 12px;
   opacity: 0.7;
+  font-size: 16px;
 }
 .footer-todoList .div-btns button {
   margin-right: 10px;
@@ -216,6 +219,10 @@
 .CompletedTodo {
   text-decoration: line-through;
   opacity: 0.4 !important;
+}
+
+.btn-active {
+  color: hsl(220deg, 98%, 61%) !important;
 }
 
 @media screen and (max-width: 600px) {
@@ -237,7 +244,7 @@
 
   .div-btns {
     position: absolute;
-    top: 70px;
+    top: 120px;
     right: 1px;
     width: 100%;
     height: 50px;
